--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^0.17.0"
+    "faker": "^5.5.3",
+    "json-server": "^0.17.0",
+    "lodash": "^4.17.21"
   }
 }
